bug fixed: immutable list->mutable